<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HighLine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="train">Train</string>
    <string name="boats">Boats</string>
    <string name="birds">Birds</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="about">About</string>
    <string name="back">Back</string>

</resources>
