<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ToggleButton
        android:id="@+id/birds_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/boats_button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/birds" />

    <Button
        android:id="@+id/exit_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/exit" />

    <ToggleButton
        android:id="@+id/boats_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ns_button"
        android:layout_centerHorizontal="true"
        android:text="@string/boats" />

    <Button
        android:id="@+id/ns_button"
        style="android:buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sn_button"
        android:layout_below="@+id/exit_button"
        android:layout_marginTop="19dp"
        android:text="N -> S" />

    <Button
        android:id="@+id/sn_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/boats_button"
        android:layout_marginRight="22dp"
        android:layout_marginTop="24dp"
        android:layout_toLeftOf="@+id/boats_button"
        android:text="S -> N" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/birds_button"
        android:layout_marginBottom="17dp"
        android:text="@string/settings" />

</RelativeLayout>